# egov-mcp

./: .gitignore  .mcp.json  Dockerfile  MCP_RULES.md  Makefile  README.md  pyproject.toml
APIレスポンス/: キーワード検索API.md  参考URL.md  法令一覧取得API.md  法令履歴一覧取得API.md  法令本文ファイル取得API.md  法令本文取得API.md  添付ファイル取得API.md
egov_mcp/: __init__.py  main.py
